syntax = "proto3";

option csharp_namespace = "InventoryService";

service Inventory {
    rpc Deduct (DeductRequest) returns (DeductResponse);
}

message DeductRequest {
    int32 productId = 1;
    int32 quantity = 2;
}

message DeductResponse {
    bool success = 1;
}
